# comprehensive-microservice-pet

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
comprehensive_microservice/: api_service.py  coder.py  utils.py
tests/: test_api_service.py  test_coder.py  test_utils.py
